# Juhasz_Akos_TD1RBH

./: CMakeLists.txt  camera.c  camera.h  draw.c  draw.h  main.c  model.c  model.h
objects/: second.mtl  small_clock.mtl
